--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-
 }
-
 
 /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
